# Kodiak-Connect_v2

./: .env.example  .gitattributes  .gitignore  AI_CONTEXT.md  README.md  capacitor.config.ts  electron-builder.lupercus.yml  index.html  package-lock.json  package.json  rcfeaturesworkspaceMatrixChannelPanel.tsx.bad-audio-overwrite -ErrorAction SilentlyContinue  vite.config.ts
backend/: authServer.mjs  kodiakMusicAdminApi.mjs  kodiakMusicApi.mjs  kodiakMusicDb.mjs  kodiakMusicStorage.mjs  publicProxyRunner.mjs  pushDelivery.mjs  server.mjs  spotifyAuth.mjs
dist-lupercus-sync/: index.html
docs/: KODIAK_MUSIC_FOUNDATION.md  PLATFORM_STABILITY_PLAN.md  account-role-model.md  backend-staging-checklist.md  backend-v2-plan.md  dev-update-template.md  kodiak-music-admin-notes.md  legal-compliance-roadmap.md  lupercus-library-sync.md  privacy-policy-draft.md  product-discipline-lite.md  release-plan.md  release-workflow.md  trust-and-safety-model.md
electron/: main.cjs  preload.cjs
electron-lupercus/: main.cjs  preload.cjs
infra/: .env.staging.example  docker-compose.staging.yml
scripts/: build-frontend.mjs  bump-version.ps1  kodiak-music-upload-one.mjs  local-add-safety-center-report-history.cjs  post-matrix-dev-update.mjs  prepare-lupercus-assets.mjs  publish-windows-release.ps1  release-all.ps1  release-all.ps1.broken-20260603-000328.bak  release-windows.ps1  (+1 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.conf.json.broken
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.bak  linux_webrtc.rs  main.rs
(+152 files in other folders)
