[package]
name = "kodiak-connect"
version = "0.1.0"
description = "Kodiak Connect desktop shell"
authors = ["Kodiak Holdings"]
edition = "2021"

[lib]
name = "kodiak_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rfd = "0.15"
tauri-plugin-notification = "2.3.3"
